portfolio and cases creation

--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,9 @@
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Tecnologias</a>
             <a href="#contato"
               class="text-gray-700  hover:text-primary-700 font-medium transition-colors">Contato</a>
-            <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs." target="_blank" rel="noopener noreferrer"
+            <a
+              href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
+              target="_blank" rel="noopener noreferrer"
               class="bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">
               Falar agora
               <i class="ml-1 fa-brands fa-whatsapp"></i>
@@ -145,7 +147,8 @@
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Tecnologias</a>
             <a href="#contato"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
-            <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
+            <a
+              href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
               class="block mx-3 mt-4 bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">
               Falar agora
               <i class="ml-1 fa-brands fa-whatsapp"></i>
@@ -309,7 +312,7 @@
                       <div
                         class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
                       <span class="text-gray-700 font-medium">Design moderno e
-                        responsivo</span>
+                        responsivo que funciona em qualquer dispositivo</span>
                     </div>
                     <div class="flex items-start space-x-3">
                       <div
@@ -321,7 +324,7 @@
                       <div
                         class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
                       <span class="text-gray-700 font-medium">SEO básico +
-                        Google Analytics</span>
+                        Google Analytics para aparecer mais nas pesquisas</span>
                     </div>
                     <div class="flex items-start space-x-3">
                       <div
@@ -875,17 +878,21 @@
       </section>
 
       <!-- Portfolio Preview Section -->
-      <section id="portfolio-preview" class="py-20 lg:py-28 bg-white relative overflow-hidden">
+      <section id="portfolio-preview"
+        class="py-20 lg:py-28 bg-white relative overflow-hidden">
         <!-- Background Effects -->
         <div class="absolute inset-0 opacity-5">
-          <div class="absolute top-20 left-10 w-32 h-32 bg-accent-500 rounded-full blur-3xl"></div>
-          <div class="absolute bottom-20 right-10 w-48 h-48 bg-primary-500 rounded-full blur-3xl"></div>
+          <div
+            class="absolute top-20 left-10 w-32 h-32 bg-accent-500 rounded-full blur-3xl"></div>
+          <div
+            class="absolute bottom-20 right-10 w-48 h-48 bg-primary-500 rounded-full blur-3xl"></div>
         </div>
 
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
           <!-- Section Header -->
           <div class="text-center mb-16">
-            <div class="inline-flex items-center bg-accent-100 text-accent-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
+            <div
+              class="inline-flex items-center bg-accent-100 text-accent-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
               <span class="w-2 h-2 bg-accent-500 rounded-full mr-2"></span>
               Nossos Projetos
             </div>
@@ -898,28 +905,32 @@
           </div>
 
           <!-- Construction Message -->
-          <div class="max-w-4xl mx-auto text-center" style="display: block;" id="portfolio-construction">
-            <div class="bg-white rounded-3xl p-8 shadow-lg hover:shadow-2xl transition-all duration-500 hover:-translate-y-3 border-t-4 border-highlight-500 relative overflow-hidden">
+          <div class="max-w-4xl mx-auto text-center" style="display: block;"
+            id="portfolio-construction">
+            <div
+              class="bg-white rounded-3xl p-8 shadow-lg hover:shadow-2xl transition-all duration-500 hover:-translate-y-3 border-t-4 border-highlight-500 relative overflow-hidden">
               <!-- Animated Icon -->
               <div class="relative mb-8">
-                <div class="w-24 h-24 bg-gradient-to-r from-accent-500 to-primary-600 rounded-2xl mx-auto flex items-center justify-center animate-pulse">
+                <div
+                  class="w-24 h-24 bg-gradient-to-r from-accent-500 to-primary-600 rounded-2xl mx-auto flex items-center justify-center animate-pulse">
                   <i class="fas fa-code text-white text-3xl"></i>
                 </div>
               </div>
 
               <h3 class="text-2xl font-bold text-primary-900 mb-4">
-                🚧 Grandes Projetos em Preparação
+                Nossos Projetos
               </h3>
               <p class="text-lg text-gray-700 mb-8 leading-relaxed">
-                Estamos organizando nosso portfólio com projetos incríveis que desenvolvemos.<br>
-                Em breve você poderá conhecer todas as soluções digitais que criamos para nossos clientes.
+                Alguns clientes que já confiaram em nós:<br>
               </p>
 
               <!-- Client Logos Carousel -->
-              <div class="mb-8">
-                <p class="text-sm text-gray-600 mb-4 font-medium">Já confiaram em nós:</p>
-                <div class="relative overflow-hidden">
-                  <div class="client-logos-scroll flex items-center space-x-8" id="client-logos">
+
+              <div class="mb-12">
+                <div
+                  class="relative overflow-hidden rounded-2xl bg-white p-8 shadow-lg">
+                  <div class="client-logos-scroll flex items-center space-x-8"
+                    id="client-logos-page">
                     <!-- Logos será adicionado via JavaScript -->
                   </div>
                 </div>
@@ -927,14 +938,11 @@
 
               <!-- CTA Buttons -->
               <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="portfolio.html"
-                   class="bg-gradient-to-r from-accent-500 to-primary-600 text-white px-8 py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
-                  Ver Portfólio Completo
-                </a>
-                <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Olá%20👋!%0AGostaria%20de%20conhecer%20alguns%20projetos%20que%20vocês%20já%20desenvolveram."
-                   target="_blank" rel="noopener noreferrer"
-                   class="bg-gradient-to-r from-highlight-500 to-accent-600 text-white px-8 py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
-                  Conversar sobre meu Projeto
+                <a
+                  href="https://api.whatsapp.com/send?phone=5517991446829&text=Olá%20👋!%0AGostaria%20de%20conhecer%20alguns%20projetos%20que%20vocês%20já%20desenvolveram."
+                  target="_blank" rel="noopener noreferrer"
+                  class="bg-gradient-to-r from-highlight-500 to-accent-600 text-white px-8 py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+                  Venha fazer parte dessa lista!
                   <i class="ml-2 fa-brands fa-whatsapp"></i>
                 </a>
               </div>
@@ -1266,7 +1274,9 @@
               </a>
             </div>
             <div class="block lg:hidden">
-              <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21" target="_blank"
+              <a
+                href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21"
+                target="_blank"
                 rel="noopener noreferrer"
                 class="group inline-flex items-center bg-gradient-to-r from-accent-500 to-highlight-600 text-white px-12 py-5 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl hover:shadow-accent-400/30 mb-16 relative overflow-hidden">
                 <span class="relative z-10 flex items-center">
@@ -1283,7 +1293,9 @@
             <!-- Contact Methods Grid -->
             <div
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-16">
-              <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21" target="_blank"
+              <a
+                href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21"
+                target="_blank"
                 rel="noopener noreferrer"
                 class="group hidden md:flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-accent-500/10 transition-all duration-300 border border-white/10 hover:border-accent-400/50 hover:-translate-y-2 cursor-pointer">
 
