sereval changes on services and prices, case page on construction

--- a/public/cases/ici.html
+++ b/public/cases/ici.html
@@ -48,7 +48,7 @@
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between h-16">
           <!-- Logo -->
-          <a href="index.html"
+          <a href="../index.html"
             class="flex items-center space-x-3 cursor-pointer">
             <img src="../assets/images/logos/dharma-labs-main.svg"
               alt="Dharma Labs" class="w-20 h-20 -mr-4" />
@@ -68,7 +68,7 @@
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Portfólio</a>
             <a href="../index.html#contato"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Contato</a>
-            <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20pre%C3%A7os%20e%20servi%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs." target="_blank" rel="noopener noreferrer"
+            <a href="https://api.whatsapp.com/send?phone=5517996276236&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20pre%C3%A7os%20e%20servi%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs." target="_blank" rel="noopener noreferrer"
               class="bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">
               Falar agora
               <i class="ml-1 fa-brands fa-whatsapp"></i>
@@ -98,7 +98,7 @@
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Portfólio</a>
             <a href="../index.html#contato"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
-            <a href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20pre%C3%A7os%20e%20servi%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
+            <a href="https://api.whatsapp.com/send?phone=5517996276236&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20pre%C3%A7os%20e%20servi%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
               class="block mx-3 mt-4 bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">
               Falar agora
               <i class="ml-1 fa-brands fa-whatsapp"></i>
