--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="description"
       content="Transformamos ideias em soluções digitais. Desenvolvimento de sites, sistemas web, dashboards, apps mobile e automação. Tecnologia com propósito.">
     <meta name="keywords"
-      content="desenvolvimento web, criação de sites, sistemas web, apps mobile, dashboards, automação, IA, São Paulo">
+      content="desenvolvimento web, criação de sites, sistemas web, apps mobile, dashboards, automação, IA, São José do Rio Preto, São Paulo">
     <meta name="author" content="Dharma Labs">
 
     <!-- Open Graph Meta Tags -->
@@ -62,13 +62,13 @@
     "logo": "https://dharmalabs.com.br/assets/images/logos/dharma-labs-main.svg",
     "contactPoint": {
       "@type": "ContactPoint",
-      "telephone": "+55-11-99999-9999",
+      "telephone": "+55-17-99627-6236",
       "contactType": "customer service",
       "availableLanguage": "Portuguese"
     },
     "address": {
       "@type": "PostalAddress",
-      "addressLocality": "São Paulo",
+      "addressLocality": "São José do Rio Preto",
       "addressRegion": "SP",
       "addressCountry": "BR"
     },
@@ -113,7 +113,7 @@
             <a href="#contato"
               class="text-gray-700  hover:text-primary-700 font-medium transition-colors">Contato</a>
             <a
-              href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
+              href="https://api.whatsapp.com/send?phone=5517996276236&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
               target="_blank" rel="noopener noreferrer"
               class="bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">
               Falar agora
@@ -148,7 +148,7 @@
             <a href="#contato"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
             <a
-              href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
+              href="https://api.whatsapp.com/send?phone=5517996276236&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20os%20servi%C3%A7os%20e%20pre%C3%A7os%20da%20%F0%9F%AA%B7Dharma%20Labs."
               class="block mx-3 mt-4 bg-gradient-to-r from-accent-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">
               Falar agora
               <i class="ml-1 fa-brands fa-whatsapp"></i>
@@ -265,8 +265,8 @@
           <!-- Enhanced Section Header -->
           <div class="text-center mb-20">
             <div
-              class="inline-flex items-center bg-primary-100 text-primary-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
-              <span class="w-2 h-2 bg-primary-500 rounded-full mr-2"></span>
+              class="inline-flex items-center bg-highlight-100 text-highlight-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
+              <span class="w-2 h-2 bg-highlight-500 rounded-full mr-2"></span>
               Nossas Especialidades
             </div>
             <h2
@@ -304,7 +304,7 @@
 
                   <p class="text-gray-600 mb-8 leading-relaxed text-lg">
                     Sites modernos, responsivos e otimizados para conversão,
-                    desenvolvidos com as melhores práticas de UX/UI.
+                    desenvolvidos com as melhores práticas de design.
                   </p>
 
                   <div class="space-y-4 mb-8">
@@ -323,14 +323,13 @@
                     <div class="flex items-start space-x-3">
                       <div
                         class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                      <span class="text-gray-700 font-medium">SEO básico +
-                        Google Analytics para aparecer mais nas pesquisas</span>
+                      <span class="text-gray-700 font-medium">SEO para aparecer mais nas pesquisas + Google Analytics </span>
                     </div>
                     <div class="flex items-start space-x-3">
                       <div
                         class="w-2 h-2 bg-accent-500 rounded-full mt-2 flex-shrink-0"></div>
-                      <span class="text-gray-700 font-medium">Hospedagem e
-                        manutenção inclusa</span>
+                      <span class="text-gray-700 font-medium">Hospedagem inclusa
+                        com SSL</span>
                     </div>
                     <div class="flex items-start space-x-3">
                       <div
@@ -378,7 +377,7 @@
                       <div
                         class="w-2 h-2 bg-primary-500 rounded-full mt-2 flex-shrink-0"></div>
                       <span class="text-gray-700 font-medium">Design responsivo
-                        e otimizado</span>
+                        e otimizado para funcionar em qualquer dispositivo</span>
                     </div>
                     <div class="flex items-start space-x-3">
                       <div
@@ -389,14 +388,14 @@
                     <div class="flex items-start space-x-3">
                       <div
                         class="w-2 h-2 bg-primary-500 rounded-full mt-2 flex-shrink-0"></div>
-                      <span class="text-gray-700 font-medium">Integração com
+                      <span class="text-gray-700 font-medium">Links para
                         redes sociais</span>
                     </div>
                     <div class="flex items-start space-x-3">
                       <div
                         class="w-2 h-2 bg-primary-500 rounded-full mt-2 flex-shrink-0"></div>
                       <span class="text-gray-700 font-medium">Analytics
-                        integrado</span>
+                        integrado para acompanhar suas visitas</span>
                     </div>
                     <div class="flex items-start space-x-3">
                       <div
@@ -693,8 +692,7 @@
                   </div>
 
                   <p class="text-gray-600 mb-8 leading-relaxed text-lg">
-                    Contas de e-mail personalizadas com seu domínio, integradas
-                    ao Google Workspace e prontas para profissionalizar sua
+                    Contas de e-mail personalizadas com seu domínio, prontas para profissionalizar sua
                     comunicação.
                   </p>
 
@@ -705,12 +703,12 @@
                       <span class="text-gray-700 font-medium">E-mails com seu
                         próprio domínio</span>
                     </div>
-                    <div class="flex items-start space-x-3">
+                    <!-- <div class="flex items-start space-x-3">
                       <div
                         class="w-2 h-2 bg-primary-500 rounded-full mt-2 flex-shrink-0"></div>
                       <span class="text-gray-700 font-medium">Integração com
                         Google Workspace</span>
-                    </div>
+                    </div> -->
                     <div class="flex items-start space-x-3">
                       <div
                         class="w-2 h-2 bg-primary-500 rounded-full mt-2 flex-shrink-0"></div>
@@ -780,8 +778,8 @@
                     <div class="flex items-start space-x-3">
                       <div
                         class="w-2 h-2 bg-highlight-500 rounded-full mt-2 flex-shrink-0"></div>
-                      <span class="text-gray-700 font-medium">Consultoria QA
-                        completa</span>
+                      <span class="text-gray-700 font-medium">Análise e automação de testes
+                        de qualidade de software</span>
                     </div>
                     <div class="flex items-start space-x-3">
                       <div
@@ -852,8 +850,7 @@
                     <div class="flex items-start space-x-3">
                       <div
                         class="w-2 h-2 bg-primary-500 rounded-full mt-2 flex-shrink-0"></div>
-                      <span class="text-gray-700 font-medium">Suporte técnico
-                        dedicado</span>
+                      <span class="text-gray-700 font-medium">Suporte técnico</span>
                     </div>
                     <div class="flex items-start space-x-3">
                       <div
@@ -892,8 +889,8 @@
           <!-- Section Header -->
           <div class="text-center mb-16">
             <div
-              class="inline-flex items-center bg-accent-100 text-accent-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
-              <span class="w-2 h-2 bg-accent-500 rounded-full mr-2"></span>
+              class="inline-flex items-center bg-highlight-100 text-highlight-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
+              <span class="w-2 h-2 bg-highlight-500 rounded-full mr-2"></span>
               Nossos Projetos
             </div>
             <h2 class="text-4xl sm:text-5xl font-bold text-primary-900 mb-6">
@@ -939,7 +936,7 @@
               <!-- CTA Buttons -->
               <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <a
-                  href="https://api.whatsapp.com/send?phone=5517991446829&text=Olá%20👋!%0AGostaria%20de%20conhecer%20alguns%20projetos%20que%20vocês%20já%20desenvolveram."
+                  href="https://api.whatsapp.com/send?phone=5517996276236&text=Olá%20👋!%0AGostaria%20de%20conhecer%20alguns%20projetos%20que%20vocês%20já%20desenvolveram."
                   target="_blank" rel="noopener noreferrer"
                   class="bg-gradient-to-r from-highlight-500 to-accent-600 text-white px-8 py-3 rounded-2xl font-semibold hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                   Venha fazer parte dessa lista!
@@ -979,8 +976,8 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
           <div class="text-center mb-20">
             <div
-              class="inline-flex items-center bg-white/10 backdrop-blur-sm text-white px-4 py-2 rounded-full text-sm font-medium mb-4">
-              <span class="w-2 h-2 bg-accent-400 rounded-full mr-2"></span>
+              class="inline-flex items-center bg-highlight-100 text-highlight-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
+              <span class="w-2 h-2 bg-highlight-500 rounded-full mr-2"></span>
               Tecnologias de Ponta
             </div>
             <h2 class="text-4xl sm:text-5xl lg:text-6xl font-bold mb-6">
@@ -1135,7 +1132,7 @@
                 Integrada</div>
             </div>
 
-            <div
+            <!-- <div
               class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-accent-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-accent-400/50 hover:shadow-2xl hover:shadow-accent-400/20">
               <div
                 class="tech-icon-container">
@@ -1149,7 +1146,7 @@
               <div
                 class="tech-subtitle text-xs text-primary-300 mt-1 opacity-0 group-hover:opacity-100 transition-opacity">Email
                 Profissional</div>
-            </div>
+            </div> -->
 
             <div
               class="tech-item group bg-white/5 backdrop-blur-sm p-6 rounded-2xl text-center hover:bg-accent-500/20 hover:-translate-y-3 transition-all duration-500 border border-white/10 hover:border-accent-400/50 hover:shadow-2xl hover:shadow-accent-400/20">
@@ -1187,8 +1184,8 @@
             <div
               class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10">
               <div
-                class="w-16 h-16 bg-accent-500/20 rounded-2xl flex items-center justify-center mx-auto mb-6">
-                <span class="text-3xl">⚡</span>
+                class="w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center mx-auto mb-6">
+                <span class="text-3xl"><i class="fa-solid fa-bolt text-accent-500"></i></span>
               </div>
               <h3 class="text-2xl font-bold mb-4">Performance Superior</h3>
               <p class="text-primary-200 leading-relaxed">
@@ -1200,8 +1197,8 @@
             <div
               class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10">
               <div
-                class="w-16 h-16 bg-highlight-500/20 rounded-2xl flex items-center justify-center mx-auto mb-6">
-                <span class="text-3xl">🔒</span>
+                class="w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center mx-auto mb-6">
+                <span class="text-3xl"><i class="fa-solid fa-lock text-highlight-600"></i></span>
               </div>
               <h3 class="text-2xl font-bold mb-4">Segurança Avançada</h3>
               <p class="text-primary-200 leading-relaxed">
@@ -1213,8 +1210,8 @@
             <div
               class="text-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl border border-white/10">
               <div
-                class="w-16 h-16 bg-accent-500/20 rounded-2xl flex items-center justify-center mx-auto mb-6">
-                <span class="text-3xl">🎯</span>
+                class="w-16 h-16 bg-white/10 rounded-2xl flex items-center justify-center mx-auto mb-6">
+                <span class="text-3xl"><i class="fa-solid fa-crosshairs text-primary-600"></i></span>
               </div>
               <h3 class="text-2xl font-bold mb-4">Escalabilidade</h3>
               <p class="text-primary-200 leading-relaxed">
@@ -1241,8 +1238,8 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
           <div class="text-center max-w-5xl mx-auto">
             <div
-              class="inline-flex items-center bg-white/10 backdrop-blur-sm text-white px-4 py-2 rounded-full text-sm font-medium mb-6">
-              <span class="w-2 h-2 bg-accent-400 rounded-full mr-2"></span>
+              class="inline-flex items-center bg-highlight-100 text-highlight-700 px-4 py-2 rounded-full text-sm font-medium mb-4">
+              <span class="w-2 h-2 bg-highlight-500 rounded-full mr-2"></span>
               Vamos Começar Seu Projeto
             </div>
 
@@ -1275,7 +1272,7 @@
             </div>
             <div class="block lg:hidden">
               <a
-                href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21"
+                href="https://api.whatsapp.com/send?phone=5517996276236&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="group inline-flex items-center bg-gradient-to-r from-accent-500 to-highlight-600 text-white px-12 py-5 rounded-full text-xl font-semibold transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl hover:shadow-accent-400/30 mb-16 relative overflow-hidden">
@@ -1294,7 +1291,7 @@
             <div
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-16">
               <a
-                href="https://api.whatsapp.com/send?phone=5517991446829&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21"
+                href="https://api.whatsapp.com/send?phone=5517996276236&text=Ol%C3%A1%20%F0%9F%91%8B%21%0AGostaria%20de%20falar%20sobre%20digitalizar%20meu%20neg%C3%B3cio%21"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="group hidden md:flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-accent-500/10 transition-all duration-300 border border-white/10 hover:border-accent-400/50 hover:-translate-y-2 cursor-pointer">
@@ -1309,7 +1306,7 @@
                   minutos</p>
                 <span
                   class="text-lg font-medium group-hover:text-accent-400 transition-colors"
-                  h>(17) 99144-6829</span>
+                  h>(17) 99627-6236</span>
               </a>
 
               <a href="mailto:contato@dharmalabs.com.br" target="_blank"
