create new htaccess, bio and change instagram

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
     },
     "sameAs": [
       "https://linkedin.com/company/dharma-labs",
-      "https://instagram.com/dharmalabs"
+      "https://instagram.com/dharmalabs_"
     ]
   }
   </script>
@@ -1324,7 +1324,7 @@
                   class="text-sm font-medium group-hover:text-highlight-400 transition-colors">contato@dharmalabs.com.br</span>
               </a>
 
-              <a href="https://instagram.com/dharmalabs" target="_blank"
+              <a href="https://instagram.com/dharmalabs_" target="_blank"
                 rel="noopener noreferrer"
                 class="group flex flex-col items-center p-8 bg-white/5 backdrop-blur-sm rounded-2xl hover:bg-accent-500/10 transition-all duration-300 border border-white/10 hover:border-accent-400/50 hover:-translate-y-2">
                 <div
