improvements on htaccess

--- a/public/index.html
+++ b/public/index.html
@@ -1336,7 +1336,7 @@
                 <p class="text-primary-200 text-center mb-4">Acompanhe nossos
                   projetos</p>
                 <span
-                  class="text-lg font-medium group-hover:text-accent-400 transition-colors">@dharmalabs</span>
+                  class="text-lg font-medium group-hover:text-accent-400 transition-colors">@dharmalabs_</span>
               </a>
 
               <a
