several changes on index.html

--- a/public/precos.html
+++ b/public/precos.html
@@ -64,7 +64,7 @@
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Home</a>
             <a href="#pricing-content"
               class="bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold hover:shadow-lg transition-all duration-300 transform hover:-translate-y-0.5">Preços</a>
-            <a href="index.html#portfolio-preview"
+            <a href="index.html#projetos"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Portfólio</a>
             <a href="#contato"
               class="text-gray-700 hover:text-primary-700 font-medium transition-colors">Contato</a>
@@ -96,7 +96,7 @@
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Home</a>
             <a href="#pricing-content"
               class="block mx-3 mt-4 bg-gradient-to-r from-highlight-500 to-primary-600 text-white px-4 py-2 rounded-full text-sm font-semibold text-center">Preços</a>
-            <a href="index.html#portfolio-preview"
+            <a href="index.html#projetos"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Portfólio</a>
             <a href="#contato"
               class="block px-3 py-2 text-gray-700 hover:text-primary-700 font-medium text-center">Contato</a>
